# datalad-ebrains

./: .appveyor.yml  .gitattributes  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  requirements-devel.txt  setup.cfg  setup.py
.github/workflows/: docbuild.yml  test_crippledfs.yml  test_win2019.yml
datalad_ebrains/: __init__.py  _version.py  authenticate.py  clone.py  fairgraph_query.py  kg2ds.py  kg_query.py
datalad_ebrains/patches/: __init__.py  clone.py
datalad_ebrains/resources/: file_query_v3beta.json
datalad_ebrains/tests/: conftest.py  test_clone.py  test_register.py
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
tools/: kg_query.json  store_test_kg_query.py
