[metadata]
url = https://github.com/datalad/datalad-ebrains
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = HBP/EBRAINS support
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
install_requires =
    datalad >= 0.17
    datalad_next >= 0.6.1
    ebrains-kg-core
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = datalad_ebrains*

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
devel =
    pytest
    pytest-cov
    coverage

[options.entry_points]
# 'datalad.extensions' is THE entrypoint inspected by the datalad API builders
datalad.extensions =
    # the label in front of '=' is the command suite label
    # the entrypoint can point to any symbol of any name, as long it is
    # valid datalad interface specification (see demo in this extensions)
    ebrains = datalad_ebrains:command_suite

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_ebrains/_version.py
versionfile_build = datalad_ebrains/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_ebrains/_version.py
